opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Functors to generate BLS12-381 primitives based on stubs"
description: "Functors to generate BLS12-381 primitives based on stubs"
dev-repo: "git+https://gitlab.com/dune-universe/bls12-381-legacy.git"
license: "MIT"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.8.4"}
  "ff-sig" {>= "0.6.1" & < "0.7.0"}
  "zarith" {>= "1.10" & < "2.0"}
  "bisect_ppx" {with-test & >= "2.5"}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
